# nigui

./: Cargo.toml  README.md  plugins.json  shell.nix
scripts/: alpha_detect.py
src/: app.rs  blue.rs  filter_coefs.rs  lib.rs  main.rs  plugins.rs  wifi.rs
src/wave/: mod.rs  plot.rs  read.rs
