[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22"
lazy_static = "1.4"
rustfft = "6.0"
btleplug = "0.11.0"
uuid = "*"
generic-array = "0.13.2"
chrono = "*"
biquad = "0.4.2"

# [profile.release]
# codegen-units = 1
# panic = "abort"
# lto = true
#
# [profile.release.package."*"]
# opt-level = 3