[package]
name = "nigui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.2"
egui_plot = "0.26.2"
lazy_static = "1.4"
rustfft = "6.2"
uuid = "*"
chrono = "*"
biquad = "0.4.2"
image = "0.24.7"
rfd = "0.13.0"
json = "*"
egui-notify = "0.10"
# [profile.release]
# codegen-units = 1
# panic = "abort"
# lto = true
#
# [profile.release.package."*"]
# opt-level = 3